Rename to FlareRead, add landing page website
- Rename JustRead → FlareRead across all files (package.json, main process,
  renderer, database, localStorage keys, CI workflow, README)
- Add Astro static landing page (website/) with full design system matching
  the app: warm literary aesthetic, dark/light mode, scroll animations
- Add FlareRead logo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -156,7 +156,7 @@ jobs:
             artifacts/macos/*.zip \
             artifacts/linux/*.AppImage \
             artifacts/linux/*.deb \
-            --title "JustRead v${{ inputs.version }}" \
+            --title "FlareRead v${{ inputs.version }}" \
             --generate-notes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
