--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: Release
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Release version (e.g. 1.0.0)'
-        required: true
-        type: string
+  push:
+    tags:
+      - 'v*'
 
 permissions:
   contents: write
@@ -123,40 +120,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download Windows artifacts
+      - name: Get version from tag
+        id: version
+        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          name: windows-artifacts
-          path: artifacts/windows
+          path: artifacts
 
-      - name: Download macOS artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: macos-artifacts
-          path: artifacts/macos
+      - name: List artifacts
+        run: find artifacts -type f | head -50
 
-      - name: Download Linux artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-artifacts
-          path: artifacts/linux
-
-      - name: Delete existing release and tag (if exists)
-        run: |
-          gh release delete "v${{ inputs.version }}" --yes --cleanup-tag 2>/dev/null || true
-          git push origin :refs/tags/v${{ inputs.version }} 2>/dev/null || true
+      - name: Delete existing release (if exists)
+        run: gh release delete "${{ github.ref_name }}" --yes 2>/dev/null || true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub Release
         run: |
-          gh release create "v${{ inputs.version }}" \
-            artifacts/windows/*.exe \
-            artifacts/macos/*.dmg \
-            artifacts/macos/*.zip \
-            artifacts/linux/*.AppImage \
-            artifacts/linux/*.deb \
-            --title "FlareRead v${{ inputs.version }}" \
+          gh release create "${{ github.ref_name }}" \
+            artifacts/windows-artifacts/*.exe \
+            artifacts/macos-artifacts/*.dmg \
+            artifacts/macos-artifacts/*.zip \
+            artifacts/linux-artifacts/*.AppImage \
+            artifacts/linux-artifacts/*.deb \
+            --title "FlareRead v${{ steps.version.outputs.VERSION }}" \
             --generate-notes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
