--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "flareread",
   "version": "1.2.0",
   "description": "FlareRead - A reading application built with Electron",
+  "author": {
+    "name": "Lozadaa",
+    "email": "rlozada808@gmail.com"
+  },
   "main": "./out/main/index.js",
   "scripts": {
     "dev": "electron-vite dev",
@@ -66,7 +70,6 @@
       "out/**/*"
     ],
     "win": {
-      "icon": "build/icon.ico",
       "target": [
         {
           "target": "nsis",
@@ -77,20 +80,16 @@
           "arch": ["x64"]
         }
       ],
-      "artifactName": "FlareRead-${type}.${ext}"
+      "artifactName": "${productName}-${version}-${arch}-setup.${ext}"
     },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
-      "shortcutName": "FlareRead",
-      "installerIcon": "build/icon.ico",
-      "uninstallerIcon": "build/icon.ico",
-      "installerHeaderIcon": "build/icon.ico"
+      "shortcutName": "FlareRead"
     },
     "mac": {
-      "icon": "build/icon.icns",
       "target": [
         {
           "target": "dmg",
@@ -101,11 +100,10 @@
           "arch": ["x64", "arm64"]
         }
       ],
-      "artifactName": "FlareRead-${type}.${ext}",
+      "artifactName": "${productName}-${version}-${arch}.${ext}",
       "category": "public.app-category.education"
     },
     "linux": {
-      "icon": "build/icon.png",
       "target": [
         {
           "target": "AppImage",
@@ -116,7 +114,7 @@
           "arch": ["x64"]
         }
       ],
-      "artifactName": "FlareRead-${type}.${ext}",
+      "artifactName": "${productName}-${version}-${arch}.${ext}",
       "category": "Education"
     }
   }
