--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flareread",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "FlareRead - A reading application built with Electron",
   "author": {
     "name": "Lozadaa",
@@ -37,6 +37,7 @@
     "cmdk": "^1.1.1",
     "epubjs": "^0.3.93",
     "framer-motion": "^12.34.0",
+    "kokoro-js": "^1.2.1",
     "lucide-react": "^0.563.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -68,6 +69,9 @@
     },
     "files": [
       "out/**/*"
+    ],
+    "asarUnpack": [
+      "node_modules/onnxruntime-node/**"
     ],
     "win": {
       "icon": "build/icon.ico",
