Fix auto-release not triggering build workflow
GITHUB_TOKEN pushes don't trigger other workflows.
Add workflow_dispatch to release.yml and trigger it from auto-release.

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -84,3 +84,8 @@ jobs:
         run: |
           git tag "${{ steps.version.outputs.tag }}"
           git push origin master --tags
+
+      - name: Trigger release workflow
+        run: gh workflow run release.yml -f tag="${{ steps.version.outputs.tag }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
