[MINOR] Add FlareRead web app, Firebase config, and website web link
- Add app/ directory with full FlareRead web app (React + Vite + Firebase)
- Add Firebase hosting config for multi-site deployment (website + app)
- Add deploy scripts to package.json (deploy:app, deploy:website, deploy:all, deploy:rules)
- Add "Uso Web" button to website landing page linking to web app
- Update .gitignore to exclude .firebase/ cache and *.tsbuildinfo

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,11 @@ agent-runs/
 # Claude Code settings
 .claude/
 
+# Firebase cache
+.firebase/
+
+# TypeScript build info
+*.tsbuildinfo
+
 # Temp files
 nul
