--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -29,13 +29,14 @@ jobs:
 
       - name: Determine bump type
         id: bump
+        env:
+          COMMIT_MSG: ${{ github.event.head_commit.message }}
         run: |
-          MSG="${{ github.event.head_commit.message }}"
-          if echo "$MSG" | grep -q '\[MAJOR\]'; then
+          if echo "$COMMIT_MSG" | grep -q '\[MAJOR\]'; then
             echo "type=major" >> $GITHUB_OUTPUT
-          elif echo "$MSG" | grep -q '\[MINOR\]'; then
+          elif echo "$COMMIT_MSG" | grep -q '\[MINOR\]'; then
             echo "type=minor" >> $GITHUB_OUTPUT
-          elif echo "$MSG" | grep -q '\[PATCH\]'; then
+          elif echo "$COMMIT_MSG" | grep -q '\[PATCH\]'; then
             echo "type=patch" >> $GITHUB_OUTPUT
           fi
 
